--- a/platformio.ini
+++ b/platformio.ini
@@ -13,4 +13,6 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-lib_deps = adafruit/Adafruit SSD1306@^2.5.9
+lib_deps =
+    adafruit/Adafruit SSD1306
+    adafruit/Adafruit MCP23017 Arduino Library
