--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+build_flags = 
+    -DCORE_DEBUG_LEVEL=5
+    -DLOG_LOCAL_LEVEL=ESP_LOG_DEBUG
 lib_deps =
     adafruit/Adafruit SSD1306
     adafruit/Adafruit MCP23017 Arduino Library
