--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,9 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 build_flags = 
-    -DCORE_DEBUG_LEVEL=5
-    -DLOG_LOCAL_LEVEL=ESP_LOG_DEBUG
+    -DCORE_DEBUG_LEVEL=3
+    -DLOG_LOCAL_LEVEL=ESP_LOG_INFO
+    -DESP_LOG_LEVEL_DEBUG=0
 lib_deps =
     adafruit/Adafruit SSD1306
     adafruit/Adafruit MCP23017 Arduino Library
