--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,8 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+monitor_filters = 
+    direct
 build_flags = 
     -DCORE_DEBUG_LEVEL=3
     -DLOG_LOCAL_LEVEL=ESP_LOG_INFO
