--- a/platformio.ini
+++ b/platformio.ini
@@ -19,7 +19,9 @@ build_flags =
     -DCORE_DEBUG_LEVEL=3
     -DLOG_LOCAL_LEVEL=ESP_LOG_INFO
     -DESP_LOG_LEVEL_DEBUG=0
+board_build.filesystem = littlefs
 lib_deps =
     adafruit/Adafruit SSD1306
     adafruit/Adafruit MCP23017 Arduino Library
     https://github.com/RobTillaart/DAC8552
+    bblanchon/ArduinoJson @ ^6.21.3
