--- a/platformio.ini
+++ b/platformio.ini
@@ -24,3 +24,5 @@ lib_deps =
     adafruit/Adafruit SSD1306
     adafruit/Adafruit MCP23017 Arduino Library
     https://github.com/RobTillaart/DAC8552
+    WiFi
+    WebServer
