--- a/data/config
+++ b/data/config
@@ -1,5 +1,4 @@
 module mod_jacket 9
-# Pin aliases
 # alias ch1_A=out A
 # alias ch1_B=0
 # alias ch2_A=out B
@@ -9,6 +8,7 @@ module mod_jacket 9
 # alias ch1_out=in A
 # alias ch2_out=in B
 # alias ch3_out=in C
+# Pin aliases
 # # setup
 reset 
 # # check current
@@ -21,30 +21,30 @@ src A 2000
 v A 120 190
 reset 
 io 0 h
-v A 4100 5100 +
+v A 4100 5100     +
 # # check channel 2
 reset 
 src B 2000
 v B 120 190
 reset 
 io 1 h
-v B 4100 5100 +
+v B 4100 5100     +
 # # check channel 3
 reset 
 src C 2000
 v C 120 190
 reset 
 io 2 h
-v C 4100 5100 +
+v C 4100 5100     +
 module empty_test 0
 # test
 module mod_lpg 11
-# alias level_pot=in C
+# alias level_pot=out C
 # alias level_pot_pd=in pdA
-# alias level_A=out B
-# alias level_B=2
-# alias trig_A=out D
-# alias trig_B=4
+# alias level_A=out D
+# alias level_B=4
+# alias trig_A=out B
+# alias trig_B=2
 # alias in_A=out A
 # alias in_B=3
 # alias out_A=in A
@@ -53,5 +53,21 @@ module mod_lpg 11
 # alias out_D=in D
 # alias mode_lpg=0
 # alias mode_comb=1
-reset
-src A 0
+# alias depth_pot=in pdB
+reset 
+i +12 8000 11000
+i +5 8000 11000
+i -12 5000 7000
+# # check level pot position
+reset 
+src C 1000
+v pdA 0 30
+# # check depth pot position
+reset 
+src D 2000
+v pdB 570 650
+# skip LPG/comb mode check
+# # main check
+reset 
+src D 3000
+# send signal to in
