--- a/data/config
+++ b/data/config
@@ -21,21 +21,21 @@ src A 2000
 v A 120 190
 reset 
 io 0 h
-v A 4100 5100         +
+v A 4100 5100                  +
 # # check channel 2
 reset 
 src B 2000
 v B 120 190
 reset 
 io 1 h
-v B 4100 5100         +
+v B 4100 5100                  +
 # # check channel 3
 reset 
 src C 2000
 v C 120 190
 reset 
 io 2 h
-v C 4100 5100         +
+v C 4100 5100                  +
 module empty_test 0
 # test
 module mod_lpg 11
@@ -56,7 +56,7 @@ module mod_lpg 11
 # alias depth_pot=in pdB
 reset 
 i +12 8000 11000
-i +5 6000 10000
+i +5 3000 10000
 i -12 5000 7000
 # # check level pot position
 reset 
@@ -69,7 +69,17 @@ v pdB 490 650
 # skip LPG/comb mode check
 # # main check
 reset 
-src D 3000
 src_sig A 200
-scope A 8000 512
-freq A 180 220
+delay 100
+# no CV, check for no signal
+scope A 20000 512
+amplitude A 0 200
+delay 100
+# add CV, check for signal
+src D -3000
+scope A 20000 512
+amplitude A 2300 2800
+# add IO, check signal drop
+io 4 h
+scope A 20000 512
+amplitude A 0 200
